2007-03-29  J. Mowery <jmowery@tresys.com>

	* Libpoldiff SWIG wrapper added; wrapper treats all structures as
	  classes in the target language.

2007-03-28  J. Tang  <jtang@tresys.com>

	* Introduced 'policy list' in apol, seaudit, and sediffx.  This is
	a small text file that contains references to a base policy and
	any number of modules.

2007-03-27  J. Tang  <jtang@tresys.com>

	* added apol_policy_path_create_from_file() and
	apol_policy_path_to_file().

	* apol_str_trim() no longer has a return value; it also operates
	directly on a string, rather than a reference to a string.

	* apol_vector_t and apol_bst_t now require a destructor function
	to be given during creation time, rather than being passed as a
	second parameter respectively to apol_vector_destroy() and
	apol_bst_destroy().  All of SETools has been updated to this
	scheme.

2007-03-26  J. Tang  <jtang@tresys.com>

	* apol_context_t is now an opaque structure.  Accessors added to
	the user, role, type, and range fields.

2007-03-23  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_get_sens() and apol_mls_level_get_cats().

2007-03-23  J. Mowery <jmowery@tresys.com>

	* Libseaudit SWIG wrapper added; wrapper treats all structures as
	  classes in the target language.

2007-03-23  J. Tang  <jtang@tresys.com>

	* apol_mls_level_t and apol_mls_range_t are now opaque structures.

	* fixed error in seaudit_model_create_from_model(), where the
	duplicate's filters and sorts were being linked to the original
	model, not the newly created one.

	* fixed potential segfault in seaudit_filter_set_name() and
	seaudit_filter_set_description() if the passed in pointer was the
	same one obtained by the respecitve accessor function.

2007-03-22  J. Mowery  <jmowery@tresys.com>

	* Libapol SWIG wrapper updated to treat all structures as classes
	  in the target language.

2007-03-21  J. Tang  <jtang@tresys.com>

	* Added ability for user to specify type joins and splits in