@@ -1,3 +1,8 @@
+2007-04-02  J. Mowery <jmowery@tresys.com>
+
+	* Removed the "all_files" symbol from libsefs; this symbol was
+	  previously marked as deprecated.
+
 2007-03-29  J. Mowery <jmowery@tresys.com>
 
 	* Libpoldiff SWIG wrapper added; wrapper treats all structures as
